--- a/dataset_configs/large-paras-c.yml
+++ b/dataset_configs/large-paras-c.yml
@@ -10,5 +10,6 @@ data:
   vocab_size: 8000
   num_rows: 7936 # Keeps generated dataset <100MB so it can be hosted on GitHub
   num_examples: 
+  type: text
   mode: paragraphs
   token_level: characters
