--- a/dataset_configs/large-stories-c.yml
+++ b/dataset_configs/large-stories-c.yml
@@ -10,5 +10,6 @@ data:
   vocab_size: 8000
   num_rows: 7200 # Keeps the dataste < 100MB so it can be hosted on GitHub
   num_examples: 
+  type: text
   mode: stories
   token_level: characters
