Created submodule out of rnn code

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kindschi-fellowship-journal"]
 	path = kindschi-fellowship-journal
 	url = git@github.com:ffrankies/kindschi-fellowship-journal.git
+[submodule "tf_rnn"]
+	path = tf_rnn
+	url = git@github.com:ffrankies/tf-rnn.git
