Submodules now track master branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "kindschi-fellowship-journal"]
 	path = kindschi-fellowship-journal
 	url = git@github.com:ffrankies/kindschi-fellowship-journal.git
+	branch = master
 [submodule "tf_rnn"]
 	path = tf_rnn
 	url = git@github.com:ffrankies/tf-rnn.git
+	branch = master
